Publish updated PDFs + previews (exclude APEX PDFs)

--- a/apps/aresalab/public/publications/aresadb_technical_report/preview.mdx
+++ b/apps/aresalab/public/publications/aresadb_technical_report/preview.mdx
@@ -22,12 +22,7 @@ The emergence of Large Language Models (LLMs) and Retrieval-Augmented Generation
 
 AresaDB was designed with the following primary objectives:
 
-1. **Performance**: Sub-millisecond latencies for point queries and efficient bulk operations.
-2. **Unified Model**: Single data representation supporting multiple query paradigms.
-3. **Rust-Native**: Memory safety without garbage collection overhead.
-4. **Embeddable**: Zero external dependencies; operates as a library or CLI tool.
-5. **RAG-Ready**: Native vector search and document processing for AI applications.
-6. **Developer Experience**: Intuitive SQL interface with graph extensions.
+We designed AresaDB for sub-millisecond point-query performance and efficient bulk operations, while preserving a unified data representation that can express key-value, relational, and graph workloads. The system is Rust-native for memory safety without GC overhead, embeddable with zero external dependencies, and RAG-ready via integrated vector search and document processing. Finally, we prioritized developer experience through an intuitive SQL interface with graph extensions.
 
 ## Contributions
 
