--- a/apps/aresalab/public/publications/coordinate_embedding/preview.mdx
+++ b/apps/aresalab/public/publications/coordinate_embedding/preview.mdx
@@ -18,6 +18,12 @@ Experimental evaluation on 546,247 California addresses demonstrates that CEF ac
 
 **Mathematics Subject Classification:** 68T05 (Learning and Adaptive Systems), 51F99 (Metric Geometry), 86A30 (Geodesy)
 
+## Key Takeaways
+
+- The representation of geographic coordinates as fixed-dimensional vectors—coordinate embedding—has emerged as a fundamental technique…
+- However, existing approaches lack rigorous theoretical foundations, leading to embeddings that may distort spatial relationships in unpre…
+- This paper presents the **Coordinate Embedding Framework (CEF)**, a mathematically principled approach to transforming geographic coordin…
+
 ---
 
 ## Introduction
@@ -68,3 +74,9 @@ This paper develops the **Coordinate Embedding Framework (CEF)**, a theoreticall
 ## Paper Organization
 
 Section 2 develops the theoretical framework for coordinate embedding, formalizing the metric spaces and Lipschitz conditions. Section 3 proves the central distance preservation theorems. Section 4 describes the implementation architecture and training procedure. Section 5 presents experimental results. Section 6 concludes with discussion of limitations and future directions.
+
+## Key Takeaways
+
+- Geographic coordinates—latitude and longitude pairs—are the fundamental atoms of geospatial data.
+- Yet these two-dimensional numbers are remarkably impoverished representations.
+- The coordinates (38.4404, -122.7141) denote a specific location in Sonoma County, California, but reveal nothing about what makes that lo…
