--- a/apps/aresalab/public/publications/geoai_agentic_flow/preview.mdx
+++ b/apps/aresalab/public/publications/geoai_agentic_flow/preview.mdx
@@ -18,6 +18,12 @@ These results establish GeoAI Agentic Flow as a principled foundation for real-t
 
 **Mathematics Subject Classification:** 68T05 (Learning and Adaptive Systems), 86A30 (Geodesy), 68W15 (Distributed Algorithms)
 
+## Key Takeaways
+
+- Geographic Artificial Intelligence (GeoAI) has emerged as a critical technology for environmental risk assessment, yet existing approache…
+- This paper introduces **GeoAI Agentic Flow**, a novel architecture that synthesizes coordinate embedding, spatial neural networks, and mu…
+- Rigorous evaluation on California fire hazard data (546,000+ addresses, 1,955 fire hazard zones) demonstrates that GeoAI Agentic Flow ach…
+
 ---
 
 ## Introduction
@@ -71,3 +77,9 @@ This paper makes the following contributions:
 4. **Operational Deployment**: We describe how the system was deployed for the BlazeBuilder platform, processing 546,000+ addresses across California's fire hazard zones.
 
 The remainder of this paper develops these contributions. Section 2 establishes mathematical foundations with formal definitions and proofs. Sections 3-5 present the three core components. Section 6 describes our experimental methodology, and Section 7 presents results. Section 8 concludes with discussion of limitations and future directions.
+
+## Key Takeaways
+
+- California experienced 8,619 wildfires in 2023 alone, burning over 325,000 acres and threatening millions of structures across 58 counties.
+- Traditional Geographic Information Systems (GIS), while powerful for static analysis, struggle to meet the demands of real-time risk asse…
+- The fundamental limitation is not computational power but architectural: existing systems treat geographic coordinates as mere numbers ra…
