--- a/apps/aresalab/public/publications/mathematical_awakening/preview.mdx
+++ b/apps/aresalab/public/publications/mathematical_awakening/preview.mdx
@@ -1,118 +1,17 @@
-## Table of Contents
+## Overview
 
-### **Preface & Introduction**
+To my girls — **Allyana, Emalina, and Milana** — I want you to grow up with the confidence that the world is knowable. Not “easy,” not “obvious,” but understandable if you’re willing to stay curious, ask good questions, and keep going when something feels hard. Mathematics is one of the clearest languages we have for that kind of understanding: it teaches you how to separate signal from noise, how to reason from first principles, and how to build truth step by step.
 
-- Motivation and overview of book goals
-- How to read and use this book effectively
-- Intended audience (previously exposed but needing intuitive, practical refreshers)
+In the years ahead, intelligence — both human and machine — will shape nearly everything. My hope is that this book helps you see how intelligence is built: how patterns become models, how models become decisions, and how decisions can be made with humility and care. If you can learn to read the equations behind the world, you won’t just use the future — you’ll help create it.
 
-### **Chapter 1: Building Intuition for Functions, Exponents, and Logarithms**
+Thank you to **my wife**, for believing in me, for holding our family together through the long stretches of work, and for reminding me what matters most. And thank you to **my mom**, for her steady love and support — for the sacrifices that made my education possible, and for the strength that taught me to finish what I start.
 
-- Revolutionary approach to mathematical foundations with zero knowledge gaps
-- Deep intuitive understanding of functions, exponential growth, and logarithmic scaling
-- Real-world applications from earthquake measurements to compound interest
-- Historical context: Euler, Napier, and the evolution of mathematical notation
-- Comprehensive Python implementations and visualizations
-- Business applications in growth modeling and data analysis
-- **Complete foundational mastery summary**
+And thank you to **my dad**, for never once doubting me — for the quiet confidence that made me feel brave enough to try, and the steady presence that reminded me I could.
 
-### **Chapter 2: Understanding Derivative Rules from the Ground Up**
+And to **my mom**, again — thank you for helping us **day and night** with the kids so I could do this work. Your love shows up in every page, even when your name isn’t on the cover.
 
-- Ground-up derivation of all fundamental derivative rules with complete understanding
-- Beautiful geometric and physical intuitions for rates of change
-- Historical context: Newton vs Leibniz and the birth of calculus
-- Real-world applications from physics motion to AI optimization algorithms
-- Comprehensive Python implementations of gradient descent and optimization
-- Business applications in efficiency optimization and machine learning
-- **Complete calculus mastery toolkit**
-
-### **Chapter 3: Integral Calculus & Accumulation**
-
-- Deep intuitive understanding of accumulation and area under curves
-- Revolutionary approach to integration from Riemann sums to advanced techniques
-- Historical journey from Archimedes to the Fundamental Theorem of Calculus
-- Comprehensive applications across physics, statistics, and machine learning
-- Advanced Python implementations including Monte Carlo and numerical integration
-- Business applications in forecasting, risk assessment, and data analysis
-- **Complete integration mastery and practical toolkit**
-
-### **Chapter 4: Multivariable Calculus & Gradients**
-
-- Mastery of partial derivatives, gradients, and Jacobians in multi-dimensional spaces
-- Beautiful geometric intuitions for optimization landscapes and vector fields
-- Historical development of vector calculus and its revolutionary impact
-- Advanced applications in physics, engineering, and machine learning optimization
-- Comprehensive Python implementations of gradient descent and backpropagation
-- Business applications in multi-variable optimization and AI system training
-- **Complete multivariable calculus expertise and optimization mastery**
-
-### **Chapter 5: Linear Algebra – The Language of Modern Mathematics**
-
-- Revolutionary approach to vectors, matrices, and transformations with deep geometric intuition
-- Complete understanding of linear systems, vector spaces, and matrix operations
-- Historical evolution from solving equations to powering modern technology
-- Comprehensive applications in computer graphics, quantum physics, and machine learning
-- Advanced Python implementations including PCA, transformations, and neural networks
-- Business applications in data analysis, AI systems, and optimization problems
-- **Complete linear algebra mastery and computational expertise**
-
-### **Chapter 6: Advanced Linear Algebra – Eigenvectors, Eigenvalues & Matrix Decompositions**
-
-- Deep mastery of eigenvectors, eigenvalues, and their geometric significance
-- Revolutionary understanding of matrix decompositions including SVD and eigen-decomposition
-- Historical development of spectral theory and its transformative applications
-- Advanced applications in quantum mechanics, data science, and modern AI systems
-- Comprehensive Python implementations of PCA, SVD, and recommendation systems
-- Business applications in dimensionality reduction, AI algorithms, and data compression
-- **Complete advanced linear algebra expertise and decomposition mastery**
-
-### **Chapter 7: Probability & Random Variables – Making Sense of Uncertainty**
-
-- Revolutionary approach to probability theory with deep intuitive understanding
-- Complete mastery of random variables, distributions, and probabilistic reasoning
-- Historical journey from Pascal's wager to modern Bayesian machine learning
-- Comprehensive applications across physics, statistics, machine learning, and business
-- Advanced Python implementations including Bayesian inference and probabilistic modeling
-- Business applications in risk assessment, A/B testing, and uncertainty quantification
-- **Complete probability mastery and uncertainty navigation toolkit**
-
-### **Chapter 8: From Probability to Evidence – Mastering Statistical Reasoning & Data-Driven Decision Making**
-
-- Revolutionary business-focused approach to statistical reasoning and evidence-based decisions
-- Complete mastery of hypothesis testing, confidence intervals, and statistical inference
-- Historical development from Fisher's methods to modern data science applications
-- Comprehensive business applications including A/B testing, market research, and risk analysis
-- Advanced Python implementations with real-world case studies and decision frameworks
-- Strategic applications in business intelligence, scientific research, and AI model evaluation
-- **Complete statistical reasoning mastery and evidence-based leadership toolkit**
-
-### **Chapter 9: The AI Revolution – Mastering the Mathematical Foundations of Modern Machine Learning**
-
-- Revolutionary approach to understanding the mathematics behind trillion-dollar AI systems
-- Complete mastery of cutting-edge algorithms powering the AI revolution:
-  - PPO (Proximal Policy Optimization) - powering autonomous systems and robotics
-  - DPO (Direct Preference Optimization) - enabling human-aligned AI like ChatGPT
-  - Transformers and Attention Mechanisms - the foundation of language AI and GPT models
-- Strategic understanding of AI business applications and competitive advantages
-- Comprehensive Python implementations from mathematical first principles
-- Business applications in AI leadership, technology evaluation, and innovation strategy
-- **Complete AI mathematical mastery and strategic leadership toolkit**
-
-### **Chapter 10: Mathematical Mastery in Action – From Theory to Trillion-Dollar Breakthroughs**
-
-- Elite mathematical problem-solving framework for cross-disciplinary innovation leadership
-- Three breakthrough applications demonstrating trillion-dollar impact potential:
-  - Biotech Revolution: AI-powered drug discovery ($200B pharmaceutical market)
-  - Climate Intelligence: Physics-informed climate modeling ($100B clean energy transition)
-  - FinTech Innovation: Quantum-enhanced risk management ($500B financial services)
-- Strategic leadership capabilities combining mathematical sophistication with business impact
-- Complete integration of all mathematical domains into breakthrough innovation methodology
-- **Ultimate mathematical leadership and trillion-dollar innovation mastery**
-
-### **Companion Volume: Advanced Practical Applications**
-
-This mathematical foundation prepares you for the companion volume **"Advanced Machine Learning and AI Projects: From Mathematical Theory to Real-World Implementation"**, which presents 50 comprehensive projects spanning healthcare, robotics, environmental science, finance, and cutting-edge AI applications. The companion volume demonstrates how to apply these mathematical foundations to solve complex, real-world problems using state-of-the-art machine learning techniques.
+If you’re reading this years from now: I love you. Always.
 
 ---
 
-*Download the full book PDF to explore these topics in depth.*
+*Download the full book PDF to explore the complete content.*
